--- a/src/styles/LiveLog.css
+++ b/src/styles/LiveLog.css
@@ -1,4 +1,4 @@
-.modal-content-log {
+/* .modal-content-log {
   border: 1px solid #f5f5f5;
 }
 
@@ -30,4 +30,14 @@
     width: 90%;
     max-width: 1600px;
   }
+} */
+
+.btn.btn-primary-live-log {
+  margin-bottom: 10px;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    float: right;
+    font-size: 15px;
+    margin-left: 10px;
 }
