--- a/src/styles/AlertsModal.css
+++ b/src/styles/AlertsModal.css
@@ -13,6 +13,10 @@
   text-align: center;
   border-radius: 5px 5px 0 0;
 }
+.modal-confirm.modal-dialog {
+  margin-top: 30px;
+}
+
 .modal-confirm h4 {
   color: #545557;
   text-align: center;
