--- a/src/styles/CreateTemplateModal.css
+++ b/src/styles/CreateTemplateModal.css
@@ -99,3 +99,51 @@
     margin-right: 2px;
     top: 50%;
 }
+
+.modal-dialog-summary.modal-confirm-summary {
+  margin: 15px 23px 15px 23px;
+  text-align: center
+}
+
+th {
+  text-align: center;
+}
+
+.btn-summary {
+
+  /* float: right; */
+  font-size: 15px;
+  margin-left: 10px;
+  /* margin-top: 15px; */
+  /* margin-bottom: -6px; */
+  /* margin-right: 10px; */
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.btn-summary.btn-danger {
+  color: #fff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
