--- a/src/styles/GetAllClients.css
+++ b/src/styles/GetAllClients.css
@@ -1,3 +1,9 @@
+.form-control {
+    width: 100%;
+    margin: 0px;
+  
+  }
+
 .btn-primary-clients {
     float: right;
     font-size: 15px;
@@ -23,3 +29,5 @@
     display: block!important;
     font-weight: 100;
 }
+
+
