implemented idleTimeout and other bugfixes

--- a/src/styles/Template.css
+++ b/src/styles/Template.css
@@ -98,3 +98,18 @@ a {
     font-size: 24px;
 }
 
+
+
+.navbar {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+/* .navbar-side {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+} */
+
+.navbar-hide {
+  pointer-events: none;
+  opacity: 0;
+}
