--- a/src/styles/FindPorts.css
+++ b/src/styles/FindPorts.css
@@ -11,5 +11,25 @@
 }
 
 .form-control {
-  margin: 10px;
+  margin-right: 0px;
+    height: 38px;
+}
+
+
+.time-interval__option.css-9gakcf-option {
+  background-color: transparent;
+  color: black;
+}
+.time-interval__option.css-9gakcf-option:hover {
+  background-color: #DEEBFF;
+  color: black;
+}
+
+.select_network_time-interval {
+  width: 184px;
+  margin-left: 4px;
+}
+
+.time-interval__control.css-yk16xz-control{
+  height: 29px;
 }
