--- a/src/styles/CreateTemplateModal.css
+++ b/src/styles/CreateTemplateModal.css
@@ -1,4 +1,3 @@
-
 /* .form-group.field.field-string {
   text-align: -webkit-center
 } */
@@ -7,7 +6,6 @@
 .form-control {
   width: 100%;
   margin: 0px;
-
 }
 
 .form-group.field.field-object {
@@ -30,24 +28,24 @@
 }
 
 .form-group.field.field-string.radio.radio-inline {
-    /* padding-left: 0px; */
-    margin-right: 57px;
-  }
+  /* padding-left: 0px; */
+  margin-right: 57px;
+}
 
-  .list-group-item-template {
-    width: 250px;
-    position: relative;
-    display: block;
-    padding: 10px 15px;
-    margin-bottom: -1px;
-    background-color: #fff;
-    border: 1px solid #ddd;
+.list-group-item-template {
+  width: 250px;
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: 1px solid #ddd;
 }
 
 .btn-glyphicon-add {
   background-color: #337ab7;
-  padding:6px;
-  margin-right:-12px;
+  padding: 6px;
+  margin-right: -12px;
 }
 .icon-btn-add {
   top: 33px;
@@ -59,13 +57,12 @@
 }
 
 .btn:focus {
-  /* color: white; */
+  color: white;
   text-decoration: none;
   outline: none;
   /* outline: 5px auto -webkit-focus-ring-color; */
   /* outline-offset: -2px; */
 }
-
 
 .text-success-add {
   color: white;
@@ -75,7 +72,7 @@
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  font-family: "Glyphicons Halflings";
   font-style: normal;
   font-weight: 400;
   line-height: 1;
@@ -89,24 +86,21 @@
 }
 
 .react-bootstrap-table-editing-cell.edit-cell-class {
-  font-family: 'Open Sans', sans-serif;
-
+  font-family: "Open Sans", sans-serif;
 }
 
-
-
-.form-control.editor.edit-select{
-  font-family: 'Open Sans', sans-serif;
+.form-control.editor.edit-select {
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   line-height: 1.42857143;
-    margin-left: 2px;
-    margin-right: 2px;
-    top: 50%;
+  margin-left: 2px;
+  margin-right: 2px;
+  top: 50%;
 }
 
 .modal-dialog-summary.modal-confirm-summary {
   margin: 15px 23px 15px 23px;
-  text-align: center
+  text-align: center;
 }
 
 th {
@@ -114,7 +108,6 @@ th {
 }
 
 .btn-summary {
-
   /* float: right; */
   font-size: 15px;
   margin-left: 10px;
