--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -12,10 +12,28 @@
 
 #page-inner {
   margin: -50px 20px 10px 0px;
-} 
+}
 
 .row-inventory {
   margin-right: 0px;
   margin-left: 0px;
 }
 
+.license-overflow {
+  height: 328px;
+  overflow-y: auto;
+}
+
+.license {
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  /* margin: 8px 5px; */
+  display: inline-block;
+}
+
+.p-license {
+  font-size: 12px;
+  line-height: 3px;
+  padding-top: 8px;
+}
