--- a/src/styles/LiveLog.css
+++ b/src/styles/LiveLog.css
@@ -33,11 +33,12 @@
 } */
 
 .btn.btn-primary-live-log {
-  margin-bottom: 10px;
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #2e6da4;
-    float: right;
-    font-size: 15px;
-    margin-left: 10px;
+  position: relative;
+  bottom: 25px;
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  float: right;
+  font-size: 12px;
+  margin-left: 10px;
 }
