--- a/src/styles/Topology.css
+++ b/src/styles/Topology.css
@@ -1,55 +1,56 @@
 div.custom-container {
-	background-color: #242424;
+  background-color: #242424;
 }
 
 svg.custom .node circle {
-	fill: #F3F3FF;
-	stroke: #2593B8;
-	stroke-width: 1.5px;
+  fill: #f3f3ff;
+  stroke: #2593b8;
+  stroke-width: 1.5px;
 }
 
 svg.custom .node text {
-	font-size: 11px;
-	background-color: #444;
-	fill: #F4F4F4;
-	text-shadow: 0 1px 4px black;
+  font-size: 11px;
+  background-color: #444;
+  fill: #f4f4f4;
+  text-shadow: 0 1px 4px black;
 }
 
 svg.custom .node {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 svg.custom path.link {
-	fill: none;
-	stroke: #2593B8;
-	stroke-width: 1.5px;
+  fill: none;
+  stroke: #2593b8;
+  stroke-width: 1.5px;
 }
 
 .custom-tree {
-	font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .linkBase {
-    fill: none;
-    stroke: gray;
+  fill: none;
+  stroke: gray;
 }
 
 .nodeNameBase {
-    fill: #000;
-    stroke: none;
-    stroke-width: 1;
+  fill: #000;
+  stroke: none;
+  stroke-width: 1;
 }
 
 .graph-id {
-	height: 969px;
-	width: 100%;
+  height: 969px;
+  width: 100%;
+  overflow: hidden;
 }
 
 .topology__option.css-9gakcf-option {
-	background-color: transparent;
-	color: black;
-  }
-  .topology__option.css-9gakcf-option:hover {
-	background-color: #DEEBFF;
-	color: black;
-  }
+  background-color: transparent;
+  color: black;
+}
+.topology__option.css-9gakcf-option:hover {
+  background-color: #deebff;
+  color: black;
+}
