mongo/AD auth fix

--- a/src/styles/Template.css
+++ b/src/styles/Template.css
@@ -136,3 +136,11 @@ a {
   pointer-events: none;
   opacity: 0;
 }
+
+.loggedin-user {
+  position: relative;
+  float: right;
+  margin: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
