--- a/src/styles/Template.css
+++ b/src/styles/Template.css
@@ -144,12 +144,13 @@ a {
   font-weight: bold;
   margin-right: 5px;
   margin-top: 20px;
+  color: #868686;
 }
 
 .c-dropdown.dropdown {
   float: right;
   margin-right: 10px;
-  margin-top: 5px;
+  margin-top: 18px;
 }
 
 
@@ -159,13 +160,12 @@ a {
 }
 
 .top-navbar .dropdown-menu {
-  top: 60px;
+  top: 45px;
   max-width: 230px;
   border-radius: 0 0 4px 4px;
   border: 0;
-  margin: px;
   margin-right: 0px;
-  left: -144px;
+  left: -160px;
   bottom: 10px;
   min-width: 100px;
   background-color: #fff;
